--- a/Data_Exploration_CauseofDeath_Classification.ipynb
+++ b/Data_Exploration_CauseofDeath_Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -399,26 +399,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1735\n"
+      "0\n"
      ]
     }
    ],
    "source": [
-    "cols = list(df.columns)\n",
+    "cols = list()\n",
     "cols.sort()\n",
     "print(len(cols))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -929,17 +929,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import svm, metrics\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "base_data = df_selected[df_selected['Deathevent']==1]\n",
     "\n",
-    "y = base_data[:,1] # y is cause of death\n",
-    "X = base_data[:,2:] # X is based on patients' personal information\n",
+    "y = base_data['Causeofdeath'] # y is cause of death\n",
+    "X = base_data.drop(columns=['Deathevent', 'Causeofdeath', 'Deathevent', 'TechniqueFailureevent', 'nome_cidade', 'DataincioPDNEt']) # X is based on patients' personal information\n",
     "\n",
     "# Split data into train and test subsets\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -948,54 +947,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Build a boost gradient model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM classifier with linear kernel:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "         1.0       0.38      0.58      0.46        79\n",
-      "         2.0       0.00      0.00      0.00        14\n",
-      "         3.0       0.00      0.00      0.00         5\n",
-      "         4.0       0.00      0.00      0.00        20\n",
-      "         5.0       0.35      0.36      0.35        76\n",
-      "         6.0       0.00      0.00      0.00         0\n",
-      "         7.0       0.00      0.00      0.00        18\n",
-      "\n",
-      "    accuracy                           0.34       212\n",
-      "   macro avg       0.10      0.13      0.12       212\n",
-      "weighted avg       0.26      0.34      0.30       212\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/yitzhang/.local/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/home/yitzhang/.local/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1221: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+      "0.36792452830188677\n"
      ]
     }
    ],
    "source": [
-    "# Build a SVM model\n",
+    "# Build a Gradient Boosting Classifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "\n",
-    "lin_svc = svm.SVC(kernel='linear')\n",
+    "clf = GradientBoostingClassifier(random_state=0)\n",
+    "clf.fit(X_train, y_train)\n",
+    "score = clf.score(X_test, y_test)\n",
+    "\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build an SVM Classifier\n",
+    "from sklearn import svm, metrics\n",
+    "\n",
+    "lin_svc = svm.SVC(kernel='linear', decision_function_shape='ovr')\n",
     "lin_svc.fit(X_train, y_train)\n",
     "y_pred_lin = lin_svc.predict(X_test)\n",
     "\n",
@@ -1004,40 +987,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVM classifier with polynomial kernel (d = 3):\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "         1.0       0.37      1.00      0.54        79\n",
-      "         2.0       0.00      0.00      0.00        14\n",
-      "         3.0       0.00      0.00      0.00         5\n",
-      "         4.0       0.00      0.00      0.00        20\n",
-      "         5.0       0.00      0.00      0.00        76\n",
-      "         7.0       0.00      0.00      0.00        18\n",
-      "\n",
-      "    accuracy                           0.37       212\n",
-      "   macro avg       0.06      0.17      0.09       212\n",
-      "weighted avg       0.14      0.37      0.20       212\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/yitzhang/.local/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "poly_svc = svm.SVC(kernel='poly', degree=3)\n",
+    "poly_svc = svm.SVC(kernel='poly', degree=3, decision_function_shape='ovr')\n",
     "poly_svc.fit(X_train, y_train)\n",
     "y_pred_poly = poly_svc.predict(X_test)\n",
     "\n",
@@ -1047,40 +1001,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVM classifier with rbf kernel:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "         1.0       0.37      1.00      0.54        79\n",
-      "         2.0       0.00      0.00      0.00        14\n",
-      "         3.0       0.00      0.00      0.00         5\n",
-      "         4.0       0.00      0.00      0.00        20\n",
-      "         5.0       0.00      0.00      0.00        76\n",
-      "         7.0       0.00      0.00      0.00        18\n",
-      "\n",
-      "    accuracy                           0.37       212\n",
-      "   macro avg       0.06      0.17      0.09       212\n",
-      "weighted avg       0.14      0.37      0.20       212\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/yitzhang/.local/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rbf_svc = svm.SVC(kernel='rbf')\n",
+    "rbf_svc = svm.SVC(kernel='rbf', decision_function_shape='ovr')\n",
     "rbf_svc.fit(X_train, y_train)\n",
     "y_pred_rbf = rbf_svc.predict(X_test)\n",
     "\n",
@@ -1090,41 +1015,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "KNN classifier with n=15:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "         1.0       0.47      0.65      0.54        82\n",
-      "         2.0       0.00      0.00      0.00        25\n",
-      "         3.0       0.00      0.00      0.00         4\n",
-      "         4.0       0.00      0.00      0.00        16\n",
-      "         5.0       0.35      0.52      0.42        64\n",
-      "         6.0       0.00      0.00      0.00         1\n",
-      "         7.0       0.33      0.10      0.15        20\n",
-      "\n",
-      "    accuracy                           0.42       212\n",
-      "   macro avg       0.17      0.18      0.16       212\n",
-      "weighted avg       0.32      0.42      0.35       212\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/yitzhang/.local/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Build a KNN Classifier\n",
     "from sklearn import neighbors, datasets\n",
+    "\n",
     "n_neighbors = 15\n",
     "knn = neighbors.KNeighborsClassifier(n_neighbors, weights='uniform')\n",
     "knn.fit(X_train, y_train)\n",
